--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "jira_sprint_tasks"
+name = "sprint-tasks"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,4 +8,7 @@ reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-dotenv = "0.15"
+base64 = "0.21"
+clap = { version = "4.3", features = ["derive"] }
+dirs = "5.0"
+anyhow = "1.0"
