Format output for Unix-like usage

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-JIRA_DOMAIN=your-domain.atlassian.net
-JIRA_EMAIL=your-email@example.com
-JIRA_API_TOKEN=your-api-token
-BOARD_ID=your-board-id
+JIRA_DOMAIN=sklls.atlassian.net
+JIRA_EMAIL=joar@sklls.ai
+JIRA_API_TOKEN=[REDACTED_TOKEN]
+BOARD_ID=4
