Fix config loading and add API token refresh on auth failure

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 /target
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Config files with sensitive data
+config.json
+**/config.json
+
+# API tokens and secrets
+*.token
+*.key
+*.pem
